// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LedgerFeesModalComponent /> show error if fetching fees failed, show retry and cancel buttons 1`] = `
<View
  fifth={true}
  shadow={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 10,
      "marginHorizontal": 30,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 30,
    }
  }
>
  <View
    spaceBetween={true}
    style={
      Object {
        "borderBottomColor": "#3f3f3f",
        "borderBottomWidth": 0.25,
        "justifyContent": "space-between",
        "padding": 20,
      }
    }
  >
    <View
      accessibilityLabel="ledger-fees-modal-header-icon"
      accessible={true}
      center={true}
      clearBg={true}
      iconStyle={
        Array [
          Object {
            "margin": 10,
          },
        ]
      }
      medium={true}
      resizeMode="contain"
      src={
        Object {
          "default": "RelativeImageStub",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        }
      }
      testID="ledger-fees-modal-header-icon"
    >
      <View
        style={Object {}}
      >
        <Image
          accessibilityLabel="ledger-fees-modal-header-icon"
          accessible={true}
          resizeMode="contain"
          source={
            Object {
              "default": "RelativeImageStub",
            }
          }
          style={
            Array [
              Object {
                "height": 30,
                "width": 30,
              },
              null,
              Object {
                "margin": 10,
              },
            ]
          }
          testID="ledger-fees-modal-header-icon"
        />
      </View>
    </View>
    <Text
      accessibilityLabel="There was a problem checking transaction fees. Retry?"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-content"
    >
      There was a problem checking transaction fees. Retry?
    </Text>
  </View>
  <View
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "marginLeft": 0,
            "marginRight": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          accessibilityLabel="ledger-fees-modal-Cancel"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ledger-fees-modal-Cancel"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "color": "#4A8FE3",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "marginLeft": 0,
            "marginRight": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          accessibilityLabel="ledger-fees-modal-Retry"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ledger-fees-modal-Retry"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "color": "#4A8FE3",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Retry
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<LedgerFeesModalComponent /> show loader, loading text, no buttons, if fetching fees 1`] = `
<View
  fifth={true}
  shadow={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 10,
      "marginHorizontal": 30,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 30,
    }
  }
>
  <View
    spaceBetween={true}
    style={
      Object {
        "borderBottomColor": "#3f3f3f",
        "borderBottomWidth": 0.25,
        "justifyContent": "space-between",
        "padding": 20,
      }
    }
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
        }
      }
    >
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "padding": 20,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#777777"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
    <Text
      accessibilityLabel="Getting fees..."
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-content"
    >
      Getting fees...
    </Text>
  </View>
</View>
`;

exports[`<LedgerFeesModalComponent /> show text passed by consumer of component, if renderFeesText is passed 1`] = `
<View
  fifth={true}
  shadow={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 10,
      "marginHorizontal": 30,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 30,
    }
  }
>
  <View
    spaceBetween={true}
    style={
      Object {
        "borderBottomColor": "#3f3f3f",
        "borderBottomWidth": 0.25,
        "justifyContent": "space-between",
        "padding": 20,
      }
    }
  >
    <View
      accessibilityLabel="ledger-fees-modal-header-icon"
      accessible={true}
      center={true}
      clearBg={true}
      iconStyle={
        Array [
          Object {
            "margin": 10,
          },
        ]
      }
      medium={true}
      resizeMode="contain"
      src={
        Object {
          "default": "RelativeImageStub",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        }
      }
      testID="ledger-fees-modal-header-icon"
    >
      <View
        style={Object {}}
      >
        <Image
          accessibilityLabel="ledger-fees-modal-header-icon"
          accessible={true}
          resizeMode="contain"
          source={
            Object {
              "default": "RelativeImageStub",
            }
          }
          style={
            Array [
              Object {
                "height": 30,
                "width": 30,
              },
              null,
              Object {
                "margin": 10,
              },
            ]
          }
          testID="ledger-fees-modal-header-icon"
        />
      </View>
    </View>
    <Text
      accessibilityLabel="0.01"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 40,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "bold",
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-title"
    >
      0.01
    </Text>
    <Text
      accessibilityLabel="Transaction fee"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 19,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "bold",
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-title"
    >
      Transaction fee
    </Text>
    <Text
      accessibilityLabel="Passed message ,0.01"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-content"
    >
      Passed message 
      0.01
    </Text>
  </View>
  <View
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "marginLeft": 0,
            "marginRight": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          accessibilityLabel="ledger-fees-modal-No"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ledger-fees-modal-No"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "color": "#4A8FE3",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              No
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "marginLeft": 0,
            "marginRight": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          accessibilityLabel="ledger-fees-modal-Yes"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ledger-fees-modal-Yes"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "color": "#4A8FE3",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Yes
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<LedgerFeesModalComponent /> show transfer fees, Yes & No buttons, if fees is fetched 1`] = `
<View
  fifth={true}
  shadow={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 10,
      "marginHorizontal": 30,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 30,
    }
  }
>
  <View
    spaceBetween={true}
    style={
      Object {
        "borderBottomColor": "#3f3f3f",
        "borderBottomWidth": 0.25,
        "justifyContent": "space-between",
        "padding": 20,
      }
    }
  >
    <View
      accessibilityLabel="ledger-fees-modal-header-icon"
      accessible={true}
      center={true}
      clearBg={true}
      iconStyle={
        Array [
          Object {
            "margin": 10,
          },
        ]
      }
      medium={true}
      resizeMode="contain"
      src={
        Object {
          "default": "RelativeImageStub",
        }
      }
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        }
      }
      testID="ledger-fees-modal-header-icon"
    >
      <View
        style={Object {}}
      >
        <Image
          accessibilityLabel="ledger-fees-modal-header-icon"
          accessible={true}
          resizeMode="contain"
          source={
            Object {
              "default": "RelativeImageStub",
            }
          }
          style={
            Array [
              Object {
                "height": 30,
                "width": 30,
              },
              null,
              Object {
                "margin": 10,
              },
            ]
          }
          testID="ledger-fees-modal-header-icon"
        />
      </View>
    </View>
    <Text
      accessibilityLabel="0.01"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 40,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "bold",
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-title"
    >
      0.01
    </Text>
    <Text
      accessibilityLabel="Transaction fee"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 19,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          Object {
            "fontWeight": "bold",
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-title"
    >
      Transaction fee
    </Text>
    <Text
      accessibilityLabel="This transaction will cost you, ,[object Object], ,Sovrin Tokens. Do you wish to continue?"
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-content"
    >
      This transaction will cost you
       
      <Text
        accessibilityLabel="0.01"
        accessible={true}
        allowFontScaling={false}
        style={
          Array [
            Object {
              "fontSize": 17,
            },
            Object {
              "fontFamily": "Lato",
            },
            Object {
              "backgroundColor": "#ffffff",
              "color": "#777777",
            },
            Object {
              "fontWeight": "bold",
            },
            Object {
              "textAlign": "center",
            },
            Object {
              "backgroundColor": "transparent",
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            Object {
              "marginBottom": 5,
            },
          ]
        }
        testID="ledger-fees-modal-content"
      >
        0.01
      </Text>
       
      Sovrin Tokens. Do you wish to continue?
    </Text>
  </View>
  <View
    row={true}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "marginLeft": 0,
            "marginRight": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          accessibilityLabel="ledger-fees-modal-No"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ledger-fees-modal-No"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "color": "#4A8FE3",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              No
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
            "marginLeft": 0,
            "marginRight": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          accessibilityLabel="ledger-fees-modal-Yes"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="ledger-fees-modal-Yes"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "color": "#4A8FE3",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Yes
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<LedgerFeesModalComponent /> trigger getLedgerFees to start fetching ledger fees 1`] = `
<View
  fifth={true}
  shadow={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 10,
      "marginHorizontal": 30,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 10,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 30,
    }
  }
>
  <View
    spaceBetween={true}
    style={
      Object {
        "borderBottomColor": "#3f3f3f",
        "borderBottomWidth": 0.25,
        "justifyContent": "space-between",
        "padding": 20,
      }
    }
  >
    <View
      center={true}
      style={
        Object {
          "alignItems": "center",
          "height": 40,
          "justifyContent": "center",
        }
      }
    >
      <View
        center={true}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "padding": 20,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#777777"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
    <Text
      accessibilityLabel="Getting fees..."
      accessible={true}
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontSize": 17,
          },
          Object {
            "fontFamily": "Lato",
          },
          Object {
            "backgroundColor": "#ffffff",
            "color": "#777777",
          },
          null,
          Object {
            "textAlign": "center",
          },
          Object {
            "backgroundColor": "transparent",
          },
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "marginBottom": 5,
          },
        ]
      }
      testID="ledger-fees-modal-content"
    >
      Getting fees...
    </Text>
  </View>
</View>
`;
